--- a/döviz_page1/style1.css
+++ b/döviz_page1/style1.css
@@ -1,26 +1,92 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: lightslategrey;
+}
+
+.bar{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 30px;
+    color: blue;
+    cursor: pointer;
+}
+
+.sidebar{
+    background-color: white;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 30%;
+    height: 100vh;
+    transform: translate(-100%); 
+    transition: 0.4s;   
+}
+
+.showSidebar{
+    transform: translate(0%);
+}
+
+.close{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 30px;
+    color: blue;
+    cursor: pointer;
+}
+
+ul{
+    margin-top: 65px;
+    padding-left: 0;
+}
+
+li{
+    list-style-type: none;
+    font-size: 25px;
+}
+
+.sidebar ul li a{
+    display: block;
+    text-decoration: none;
+    color: grey;
+    font-weight: bold;
+    padding: 15px 25px;
+    transition: background-color 0.3s;
+}
+
+.sidebar ul li a:hover{
+    background-color: darkcyan;
+    color: white;
+    text-indent: 20px;
 }
 
 .kutu{
     color: white;
-    background-color: crimson;
-    height: 250px;
-    width: 350px;
-    padding: 30px;
-    border-radius: 20px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    background-color: darkcyan;
+    height: 400px;
+    width: 500px;
+    padding: 40px;
+    border-radius: 30px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 h2{
     text-align: center;
+    font-size: 30px;
 }
 
 .sec{
-    margin-top: 20px;
+    margin-top: 50px;
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -30,39 +96,49 @@ h2{
 
 #secFirst{
     border-radius: 10px;
-    width: 60px;
-    height: 35px;
+    width: 70px;
+    height: 40px;
+    background-color: rgb(119 136 153 / 62%);
+    border: outset;
+    font-size: 15px;
+    color: white;
 }
 
 #secsecond{
     border-radius: 10px;
-    width: 60px;
-    height: 35px;
-}
-
-input{
-    width: 40px;
-    font-size: 20px;
-    text-align: right;
-    border: none;
-    background-color: transparent;
+    width: 70px;
+    height: 40px;
+    background-color: rgb(119 136 153 / 62%);
+    border: outset;
+    font-size: 15px;
     color: white;
 }
 
-input:focus,
-select:focus{
-    outline: none;
+input{
+    width: 70px;
+    height: 40px;
+    font-size: 25px;
+    text-align: center;
+    background-color: rgb(119 136 153 / 62%);
+    border: outset;
+    border-radius: 10px;
+    color: white;
 }
 
 p{
-    margin-top: 40px;
+    margin-top: 50px;
     text-align: center;
 }
 
 span{
-    font-size: 22px;
+    width: 100px;
+    height: 40px;
+    font-size: 25px;
+    text-align: center;
+    background-color: rgb(119 136 153 / 62%);
+    border: outset;
+    border-radius: 10px;
     color: white;
-    margin-right: 15px;
 }
 
 .exchangeRate{
@@ -70,32 +146,7 @@ span{
     font-size: 20px; 
 }
 
-.anasayfa{    
-    position: fixed;
-    bottom: 10px;
-    left: 0;
-    width: 100%;
-    text-align: center;
-}
-
-a{
-    text-decoration: none;
-    color: crimson;
-    font-weight: bold;
-    font-size: 30px;
-    display: inline-block;
-    padding: 10px 20px;
-    border-radius: 10px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-    cursor: pointer;
-}
-
-a:hover{
-    background-color: crimson;
-    color: white;
-}
-
 input:focus,
-select:focus {
-  outline: none;
+select:focus{
+    outline: none;
 }
