--- a/weather_page2/style2.css
+++ b/weather_page2/style2.css
@@ -1,78 +1,115 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: lightslategrey;
+}
+
+.bar{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 30px;
+    color: blue;
+    cursor: pointer;
+}
+
+.sidebar{
+    background-color: white;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 30%;
+    height: 100vh;
+    transform: translate(-100%); 
+    transition: 0.4s;   
+}
+
+.showSidebar{
+    transform: translate(0%);
+}
+
+.close{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 30px;
+    color: blue;
+    cursor: pointer;
+}
+
+ul{
+    margin-top: 65px;
+}
+
+li{
+    list-style-type: none;
+    font-size: 25px;
+}
+
+a{
+    text-decoration: none;
+    color: gray;
+    font-weight: bold;
+    padding: 15px 25px;
+    display: block;
+    transition: background-color 0.3s;
+}
+
+a:hover{
+    background-color: darkcyan;
+    color: white;
+    text-indent: 20px;
 }
 
 .kutu{
-    background: chocolate;
-    padding: 20px;
+    background: darkcyan;
+    padding: 30px;
     border-radius: 20px;
     width: 550px;
-    height: 300px;
+    height: 325px;
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 .baslık{
     text-align: center;
-    color: cornsilk;
+    color: white;
+    font-size: 28px;
 }
 
 label{
-    color: cornsilk;
-    font-size: 20px;
+    color: white;
+    font-size: 25px;
 }
 
 .tempInput{
-    background-color: cornsilk;
+    background-color: rgb(255 255 255 / 62%);
+    color: black;
     border-radius: 5px;
     border: none;
-    padding-left: 20px;      
-    font-size: 15px;   
+    padding-left: 20px;
+    font-size: 20px;
+    height: 30px;
+    width: 50%;
     
 }
 
 .satır{
     display: flex;
     justify-content: space-between;
-    height: 30px; 
+    align-items: center;
     padding: 20px;
 }
 
 .değerler{
     display: flex;
     flex-direction: column;
-    margin-top: 35px;
-
-}
-
-
-
-
-
-
-.anasayfa{    
-    position: fixed;
-    bottom: 10px;
-    left: 0;
-    width: 100%;
-    text-align: center;
-}
-
-.anasayfa a{
-    text-decoration: none;
-    color: chocolate;
-    font-weight: bold;
-    font-size: 30px;
-    display: inline-block;
-    padding: 10px 20px;
-    border-radius: 10px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-    cursor: pointer;
-}
-
-.anasayfa a:hover{
-    background-color: chocolate;
-    color: aliceblue;
+    margin-top: 30px;
 }
